--- a/necss.css
+++ b/necss.css
@@ -9,7 +9,7 @@ p{
 color:white;
 }
 #background-image{
-background: url("bat_cover.jpg");
+background: url("bat_cover.gif");
 height: 400px;
     width: 600px;
 padding-top: 50px;
